dbeaver/pro#3407 Cover FF CSV Driver by tests